# seg-tree

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: my_benchmark.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_seg_tree_iterative_queries.rs  fuzz_seg_tree_lazy_persistent_queries.rs  fuzz_seg_tree_lazy_queries.rs  fuzz_seg_tree_persistent_queries.rs  fuzz_seg_tree_recursive_queries.rs  fuzz_utils_max.rs  fuzz_utils_min.rs  fuzz_utils_sum.rs  seg_tree_queries.rs
seg-tree-macros/: Cargo.toml
seg-tree-macros/src/: lib.rs
src/: internal_utils.rs  lib.rs  nodes.rs  utils.rs
src/default/: max_subarray_sum.rs  min.rs  mod.rs  sum.rs
src/internal_utils/: dbg_utils.rs  persistent_utils.rs
src/nodes/: lazy_node.rs  mod.rs  node.rs  persistent_node.rs  wide_node.rs
src/segment_tree/: iterative.rs  lazy.rs  lazy_persistent.rs  lazy_recursive.rs  mod.rs  persistent.rs  persistent_lazy.rs  recursive.rs  recursive2.rs  wide.rs
src/segment_tree/wide/: notes.md  wide_recursive_impl.rs
src/utils/: lazy_set_wrapper.rs  max.rs  max_subarray_sum.rs  min.rs  persistent_wrapper.rs  sum.rs
