[package]
name = "seg-tree"
version = "0.2.2"
edition = "2021"
authors = ["N9199 <N9199@users.noreply.github.com>"]
documentation = "https://docs.rs/seg-tree"
repository = "https://github.com/N9199/seg-tree"
readme = "README.md"
description = "A simple segment tree library"
license = "AGPL-3.0-or-later"
exclude = [
    ".github/"
]

[dev-dependencies]
rand = "0.8.5"

[dependencies]
arbitrary = { version = "1.1.3", features = ["derive"], optional = true }
