[package]
name = "seg-tree"
version = "0.3.0"
edition = "2021"
authors = ["N9199 <N9199@users.noreply.github.com>"]
documentation = "https://docs.rs/seg-tree"
repository = "https://github.com/N9199/seg-tree"
readme = "README.md"
description = "A simple segment tree library"
license = "AGPL-3.0-or-later"
exclude = [
    ".github/"
]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
harness = false
name = "my_benchmark"

[dependencies]
bit-vec = { version = "0.6.3", default-features = false }

